PROJECT(PARALLEL_FOR)
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
FIND_PACKAGE (Threads)
SET(CMAKE_CXX_FLAGS -std=c++11)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
ADD_EXECUTABLE(parallel_qsort src/threadpool_qsort.cpp)
ADD_LIBRARY(parallel_for SHARED src/parallel_for.cpp)
TARGET_LINK_LIBRARIES (parallel_for ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES (parallel_qsort ${CMAKE_THREAD_LIBS_INIT})


SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

